--- a/src/index.html
+++ b/src/index.html
@@ -183,7 +183,7 @@
     </div>
    </div>
     <!--キャンペーン-->
-    <section id="campaign" class="campaign">
+    <section id="campaign" class="campaign-top">
       <div class="campaign__inner inner">
         <div class="campaign section-title">
           <p class="section-title__main">Campaign</p>
@@ -292,7 +292,7 @@
       </div>
     </section>
     <!--アバウトアス-->
-    <section id="about-us" class="about-us">
+    <section id="about-us" class="about-us-top">
       <div class="about-us__inner inner">
         <div class="about-us section-title">
         <p class="section-title__main">About us</p>
@@ -315,7 +315,7 @@
       </div>
     </section>
     <!--インフォメーション-->
-    <section id="information" class="information">
+    <section id="information" class="information-top">
       <div class="information__inner inner">
         <div class="information section-title">
           <p class="section-title__main">Information</p>
@@ -339,7 +339,7 @@
       </div>
     </section>
     <!--ブログ-->
-    <section id="blog" class="blog">
+    <section id="blog" class="blog-top">
       <div class="blog__inner inner">
         <div class="blog-section-title">
           <p class="section-title__main md-show">Blog</p>
@@ -395,7 +395,7 @@
       </div>
     </section>
     <!--ボイス-->
-    <section id="voice" class="voice">
+    <section id="voice" class="voice-top">
       <div class="voice__inner inner">
         <div class="voice section-title">
           <p class="section-title__main">Voice</p>
@@ -454,7 +454,7 @@
       </div>
     </section>
     <!--プライス-->
-    <section id="price" class="price">
+    <section id="price" class="price-top">
       <div class="price__inner inner">
         <div class="price section-title">
           <p class="section-title__main">Price</p>
@@ -527,7 +527,7 @@
       </div>
     </section>
     <!--コンタクト-->
-    <section id="contact" class="contact">
+    <section id="contact" class="contact-top">
       <div class="contact__inner inner">
         <div class="contact__container">
           <div class="contact__box">
@@ -578,7 +578,7 @@
     </section>
     </main>
     <!--フッター-->
-    <footer class="footer">
+    <footer class="footer-top">
       <div class="footer-menu__inner">
         <div class="footer-menu__title">
           <a href="#" class="footer__name-layout">
