--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -164,11 +164,17 @@
     <!--タブ-->
     <section id="campaign-page-container" class="campaign-page-container-top">
       <div class="campaign-page-container__inner inner">
-        <div class="campaign-page__tab-wrap">
-          <input id="tab01" type="radio" name="tab_switch" checked>
+        <div class="campaign-page__tab tab">
+          <div class="campaign-page__tab-list">
+            <button class="campaign-page__tab-button">ALL</button>
+            <button class="campaign-page__tab-button">ライセンス講習</button>
+            <button class="campaign-page__tab-button">ファンダイビング</button>
+            <button class="campaign-page__tab-button">体験ダイビング</button>
+          </div>
+          <!-- <input id="tab01" type="radio" name="tab_switch" checked>
           <label class="campaign-page__tab_label" for="tab01">ALL</label>
           <input id="campaign-page__tab02" type="radio" name="tab_switch">
-          <label class="campaign-page__tab_label" for="tab02">ライセンス講習</label>
+          <label class="campaign-page__tab_label" for="tab02">ライセンス講習</label> -->
           <!-- <input id="campaign-page__tab03" type="radio" name="tab_switch">
           <label class="campaign-page__tab_label" for="tab03">ファンダイビング</label>
           <input id="campaign-page__tab04" type="radio" name="tab_switch">
