--- a/src/index.html
+++ b/src/index.html
@@ -184,7 +184,7 @@
     </div>
    </div>
     <!--キャンペーン-->
-    <section id="campaign" class="campaign-top">
+    <section id="campaign" class="campaign campaign-top">
       <div class="campaign__inner inner">
         <div class="campaign section-title">
           <p class="section-title__main">Campaign</p>
@@ -293,7 +293,7 @@
       </div>
     </section>
     <!--アバウトアス-->
-    <section id="about-us" class="about-us-top">
+    <section id="about-us" class="about-us about-us-top">
       <div class="about-us__inner inner">
         <div class="about-us section-title">
         <p class="section-title__main">About us</p>
@@ -316,7 +316,7 @@
       </div>
     </section>
     <!--インフォメーション-->
-    <section id="information" class="information-top">
+    <section id="information" class="information information-top">
       <div class="information__inner inner">
         <div class="information section-title">
           <p class="section-title__main">Information</p>
@@ -340,7 +340,7 @@
       </div>
     </section>
     <!--ブログ-->
-    <section id="blog" class="blog-top">
+    <section id="blog" class="blog blog-top">
       <div class="blog__inner inner">
         <div class="blog-section-title">
           <p class="section-title__main md-show">Blog</p>
@@ -396,7 +396,7 @@
       </div>
     </section>
     <!--ボイス-->
-    <section id="voice" class="voice-top">
+    <section id="voice" class="voice voice-top">
       <div class="voice__inner inner">
         <div class="voice section-title">
           <p class="section-title__main">Voice</p>
@@ -455,7 +455,7 @@
       </div>
     </section>
     <!--プライス-->
-    <section id="price" class="price-top">
+    <section id="price" class="price price-top">
       <div class="price__inner inner">
         <div class="price section-title">
           <p class="section-title__main">Price</p>
@@ -528,7 +528,7 @@
       </div>
     </section>
     <!--コンタクト-->
-    <section id="contact" class="contact-top">
+    <section id="contact" class="contact contact-top">
       <div class="contact__inner inner">
         <div class="contact__container">
           <div class="contact__box">
@@ -579,8 +579,8 @@
     </section>
     </main>
     <!--フッター-->
-    <footer class="footer-top">
-      <div class="footer-menu__inner">
+    <footer class="footer footer-top">
+      <div class="footer-menu__inner inner">
         <div class="footer-menu__title">
           <a href="#" class="footer__name-layout">
             <h3 class="footer__name">
