アバウトアス修正

--- a/src/index.html
+++ b/src/index.html
@@ -419,7 +419,7 @@
                   <img src="./assets/images/voice-img1.jpg" alt="ベージュの帽子を被った笑顔の女性">
                 </div>
               </div>
-              <p class="voice-text-line"></p>
+              <!-- <p class="voice-text-line"></p> -->
               <div class="voice-card__text-box">
                 <p class="voice-card__text-sub">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。</p>
               </div>
@@ -441,7 +441,7 @@
                   <img src="./assets/images/voice-img2.jpg" alt="グッドグッド紺色のシャツを着た男性">
                 </div>
               </div>
-              <p class="voice-text-line"></p>
+              <!-- <p class="voice-text-line"></p> -->
               <div class="voice-card__text-box">
                 <p class="voice-card__text-sub">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。</p>
               </div>
