--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -142,7 +142,7 @@
     <main>
     <!--サブビュー-->
     <section id="sub-page-mv" class="sub-page-mv">
-      <div class="sub-page-mv">
+      <div class="sub-page-mv js-mv">
         <div class="sub-page-mv__inner">
           <div class="sub-page-mv-title">
             <h2 class="sub-page-mv-title__main page-section-title">Campaign</h2>
@@ -152,39 +152,136 @@
             <img src="./assets/images/campaign-page-sp-img.jpg" alt="サングラスを掛けた男性がサングラスを外そうとしている様子">
           </picture>
         </div>
-
       </div>
     </section>
     <!--パンくず-->
-    <div class="breadcrumb">
-      <div class="breadcrumb-innner inner">
-        <div>HOME > キャンペーン</div>
+    <div class="breadcrumb breadcrumb-top">
+      <div class="breadcrumb__innner inner">
+        <span><a href="./"><span>TOP</span></a></span>
+        <span>キャンペーン</span>
       </div>
     </div>
     <!--タブ-->
-    <section id="campaign-page-container" class="campaign-page-container-top">
+    <div class="campaign-page-container campaign-page-container-top">
       <div class="campaign-page-container__inner inner">
-        <div class="campaign-page__tab tab">
-          <div class="campaign-page__tab-list">
-            <button class="campaign-page__tab-button">ALL</button>
-            <button class="campaign-page__tab-button">ライセンス講習</button>
-            <button class="campaign-page__tab-button">ファンダイビング</button>
-            <button class="campaign-page__tab-button">体験ダイビング</button>
-          </div>
-          <!-- <input id="tab01" type="radio" name="tab_switch" checked>
-          <label class="campaign-page__tab_label" for="tab01">ALL</label>
-          <input id="campaign-page__tab02" type="radio" name="tab_switch">
-          <label class="campaign-page__tab_label" for="tab02">ライセンス講習</label> -->
-          <!-- <input id="campaign-page__tab03" type="radio" name="tab_switch">
-          <label class="campaign-page__tab_label" for="tab03">ファンダイビング</label>
-          <input id="campaign-page__tab04" type="radio" name="tab_switch">
-          <label class="campaign-page__tab_label" for="tab04">体験ダイビング</label>
-          <div class="campaign-page__tab-content"> -->
+        <div class="campaign-page__tab-layout">
+          <ul class="campaign-page__tab-items">
+            <li class="campaign-page__tab-item is-color"><a href="#">ALL</a></li>
+            <li class="campaign-page__tab-item"><a href="#">ライセンス講習</a></li>
+            <li class="campaign-page__tab-item"><a href="#">ファンダイビング</a></li>
+            <li class="campaign-page__tab-item"><a href="#">体験ダイビング</a></li>
+          </ul>
           </div>
         </div>
       </div>
-
+    </div>
+    <!--コンテンツ-->
+    <section id="campaign-page-contents" class="campaign-page-contents campaign-page-contents-top">
+      <div class="campaign-page-contents__inner">
+        <ul class="campaign-page-contents__items">
+          <li class="campaign-page-contents__item">
+            <a href="#" class="campaign-card__item">
+              <div class="campaign-card__img">
+                <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
+              </div>
+              <div class="campaign-card__body">
+                <div class="campaign-card-text">
+                  <p class="campaign-card-text__title">ライセンス講習</p>
+                  <p class="campaign-card-text__title-sub">ライセンス取得</p>
+                </div>
+                <p class="campaign-text-line"></p>
+                <div class="campaign-card-price">
+                  <p class="campaign-card-price__text">全部コミコミ(お一人様)</p>
+                  <div class="campaign-card-price-box">
+                    <p class="campaign-card-price__old-strike-through">¥56,000</p>
+                    <p class="campaign-card-price__new">¥46,000</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </li>
+          <li class="campaign-page-contents__item">
+            <a href="#" class="campaign-card__item">
+              <div class="campaign-card__img">
+                  <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子">
+              </div>
+              <div class="campaign-card__body">
+                <div class="campaign-card-text">
+                  <p class="campaign-card-text__title">体験ダイビング</p>
+                  <p class="campaign-card-text__title-sub">貸切体験ダイビング</p>
+                </div>
+                <p class="campaign-text-line"></p>
+                <div class="campaign-card-price">
+                  <p class="campaign-card-price__text">全部コミコミ(お一人様)</p>
+                  <div class="campaign-card-price-box">
+                    <p class="campaign-card-price__old-strike-through">¥24,000</p>
+                    <p class="campaign-card-price__new">¥18,000</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </li>
+          <li class="campaign-page-contents__item">
+            <a href="#" class="campaign-card__item">
+              <div class="campaign-card__img">
+                <img src="./assets/images/campaign-img3.jpg" alt="暗い海の中を泳いているクラゲが光に当てられている様子">
+              </div>
+              <div class="campaign-card__body">
+                <div class="campaign-card-text">
+                  <p class="campaign-card-text__title">体験ダイビング</p>
+                  <p class="campaign-card-text__title-sub">ナイトダイビング</p>
+                </div>
+                <p class="campaign-text-line"></p>
+                <div class="campaign-card-price">
+                  <p class="campaign-card-price__text">全部コミコミ(お一人様)</p>
+                  <div class="campaign-card-price-box">
+                    <p class="campaign-card-price__old-strike-through">¥10,000</p>
+                    <p class="campaign-card-price__new">¥8,000</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </li>
+          <li class="campaign-page-contents__item">
+            <a href="#" class="campaign-card__item">
+              <div class="campaign-card__img">
+                <img src="./assets/images/campaign-img4.jpg" alt="複数のダイバーたちが海の上で今にも潜ろうとしている様子">
+              </div>
+              <div class="campaign-card__body">
+                <div class="campaign-card-text">
+                  <p class="campaign-card-text__title">ファンダイビング</p>
+                  <p class="campaign-card-text__title-sub">貸切ファンダイビング</p>
+                </div>
+                <p class="campaign-text-line"></p>
+                <div class="campaign-card-price">
+                  <p class="campaign-card-price__text">全部コミコミ(お一人様)</p>
+                  <div class="campaign-card-price-box">
+                    <div class="campaign-card-price-box">
+                      <p class="campaign-card-price__old-strike-through">¥20,000</p>
+                      <p class="campaign-card-price__new">¥16,000</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
     </section>
+    <div class="pagination pagination-top">
+      <div class="pagination__inner inner">
+        <div class="pagination-nav">
+          <a class="pagination__prev" href="#"></a>
+          <span  class="pagination__current">1</span>
+          <a class="page larger" href="#">2</a>
+          <a class="page larger" href="#">3</a>
+          <a class="page larger" href="#">4</a>
+          <a class="page larger md-none" href="#">5</a>
+          <a class="page larger md-none" href="#">6</a>
+          <a class="pagination__next" href="#"></a>
+        </div>
+      </div>
+    </div>
 
 
     <!--コンタクト-->
