キャンペーンsp完成

--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -282,10 +282,8 @@
         </div>
       </div>
     </div>
-
-
     <!--コンタクト-->
-    <!-- <section id="contact" class="contact-top">
+    <section id="contact" class="campaign-page__contact campaign-page__contact-top">
       <div class="contact__inner inner">
         <div class="contact__container">
           <div class="contact__box">
@@ -333,11 +331,11 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     </main>
     <!--フッター-->
-    <!-- <footer class="footer-top">
-      <div class="footer-menu__inner">
+    <footer class="campaign-page__footer campaign-page__footer-top">
+      <div class="footer-menu__inner inner">
         <div class="footer-menu__title">
           <a href="#" class="footer__name-layout">
             <h3 class="footer__name">
@@ -428,7 +426,7 @@
         </div>
       </div>
       <small class="footer__copyright">Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights Reserved.</small>
-    </footer> -->
+    </footer>
  </div>
 </body>
 
