キャンペーンカード内容追加

--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -177,19 +177,19 @@
     </div>
     <!--コンテンツ-->
     <section id="campaign-page-contents" class="campaign-page-contents campaign-page-contents-top">
-      <div class="campaign-page-contents__inner">
+      <div class="campaign-page-contents__inner inner">
         <ul class="campaign-page-contents__items">
           <li class="campaign-page-contents__item">
             <a href="#" class="campaign-card__item">
-              <div class="campaign-card__img">
+              <div class="campaign-page-campaign-card__img">
                 <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
               </div>
-              <div class="campaign-card__body">
+              <div class="campaign-page-campaign-card__body">
                 <div class="campaign-card-text">
                   <p class="campaign-card-text__title">ライセンス講習</p>
-                  <p class="campaign-card-text__title-sub">ライセンス取得</p>
+                  <p class="campaign-page-campaign-card-text__title-sub">ライセンス取得</p>
                 </div>
-                <p class="campaign-text-line"></p>
+                <p class="campaign-page-campaign-text-line"></p>
                 <div class="campaign-card-price">
                   <p class="campaign-card-price__text">全部コミコミ(お一人様)</p>
                   <div class="campaign-card-price-box">
@@ -197,20 +197,27 @@
                     <p class="campaign-card-price__new">¥46,000</p>
                   </div>
                 </div>
+                <div class="campaign-pagecampaign-card-text__text-box md-none">
+                  <p class="campaign-pagecampaign-card-text__text">
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
+                  </p>
+                </div>
+                <div class="campaign-page-campaign-card__date md-none">2023/6/1-9/30</div>
+                <div class="campaign-page-campaign-card__reserve md-none">ご予約・お問い合わせはコチラ</div>
               </div>
             </a>
           </li>
           <li class="campaign-page-contents__item">
             <a href="#" class="campaign-card__item">
-              <div class="campaign-card__img">
+              <div class="campaign-page-campaign-card__img">
                   <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子">
               </div>
-              <div class="campaign-card__body">
+              <div class="campaign-page-campaign-card__body">
                 <div class="campaign-card-text">
                   <p class="campaign-card-text__title">体験ダイビング</p>
-                  <p class="campaign-card-text__title-sub">貸切体験ダイビング</p>
+                  <p class="campaign-page-campaign-card-text__title-sub">貸切体験ダイビング</p>
                 </div>
-                <p class="campaign-text-line"></p>
+                <p class="campaign-page-campaign-text-line"></p>
                 <div class="campaign-card-price">
                   <p class="campaign-card-price__text">全部コミコミ(お一人様)</p>
                   <div class="campaign-card-price-box">
@@ -218,20 +225,27 @@
                     <p class="campaign-card-price__new">¥18,000</p>
                   </div>
                 </div>
+                <div class="campaign-pagecampaign-card-text__text-box md-none">
+                  <p class="campaign-pagecampaign-card-text__text">
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
+                  </p>
+                </div>
+                <div class="campaign-page-campaign-card__date md-none">2023/6/1-9/30</div>
+                <div class="campaign-page-campaign-card__reserve md-none">ご予約・お問い合わせはコチラ</div>
               </div>
             </a>
           </li>
           <li class="campaign-page-contents__item">
             <a href="#" class="campaign-card__item">
-              <div class="campaign-card__img">
+              <div class="campaign-page-campaign-card__img">
                 <img src="./assets/images/campaign-img3.jpg" alt="暗い海の中を泳いているクラゲが光に当てられている様子">
               </div>
-              <div class="campaign-card__body">
+              <div class="campaign-page-campaign-card__body">
                 <div class="campaign-card-text">
                   <p class="campaign-card-text__title">体験ダイビング</p>
-                  <p class="campaign-card-text__title-sub">ナイトダイビング</p>
+                  <p class="campaign-page-campaign-card-text__title-sub">ナイトダイビング</p>
                 </div>
-                <p class="campaign-text-line"></p>
+                <p class="campaign-page-campaign-text-line"></p>
                 <div class="campaign-card-price">
                   <p class="campaign-card-price__text">全部コミコミ(お一人様)</p>
                   <div class="campaign-card-price-box">
@@ -239,20 +253,27 @@
                     <p class="campaign-card-price__new">¥8,000</p>
                   </div>
                 </div>
+                <div class="campaign-pagecampaign-card-text__text-box md-none">
+                  <p class="campaign-pagecampaign-card-text__text">
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
+                  </p>
+                </div>
+                <div class="campaign-page-campaign-card__date md-none">2023/6/1-9/30</div>
+                <div class="campaign-page-campaign-card__reserve md-none">ご予約・お問い合わせはコチラ</div>
               </div>
             </a>
           </li>
           <li class="campaign-page-contents__item">
             <a href="#" class="campaign-card__item">
-              <div class="campaign-card__img">
+              <div class="campaign-page-campaign-card__img">
                 <img src="./assets/images/campaign-img4.jpg" alt="複数のダイバーたちが海の上で今にも潜ろうとしている様子">
               </div>
-              <div class="campaign-card__body">
+              <div class="campaign-page-campaign-card__body">
                 <div class="campaign-card-text">
                   <p class="campaign-card-text__title">ファンダイビング</p>
-                  <p class="campaign-card-text__title-sub">貸切ファンダイビング</p>
+                  <p class="campaign-page-campaign-card-text__title-sub">貸切ファンダイビング</p>
                 </div>
-                <p class="campaign-text-line"></p>
+                <p class="campaign-page-campaign-text-line"></p>
                 <div class="campaign-card-price">
                   <p class="campaign-card-price__text">全部コミコミ(お一人様)</p>
                   <div class="campaign-card-price-box">
@@ -261,6 +282,13 @@
                       <p class="campaign-card-price__new">¥16,000</p>
                     </div>
                   </div>
+                  <div class="campaign-page-campaign-card-text__text-box md-none">
+                    <p class="campaign-page-campaign-card-text__text">
+                      ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
+                    </p>
+                  </div>
+                  <div class="campaign-page-campaign-card__date md-none">2023/6/1-9/30</div>
+                  <div class="campaign-page-campaign-card__reserve md-none">ご予約・お問い合わせはコチラ</div>
                 </div>
               </div>
             </a>
