マークアップ修正

--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -171,7 +171,6 @@
             <li class="campaign-page__tab-item"><a href="#">ファンダイビング</a></li>
             <li class="campaign-page__tab-item"><a href="#">体験ダイビング</a></li>
           </ul>
-          </div>
         </div>
       </div>
     </div>
@@ -181,114 +180,118 @@
         <ul class="campaign-page-contents__items">
           <li class="campaign-page-contents__item">
             <a href="#" class="campaign-card__item">
-              <div class="campaign-page-campaign-card__img">
+              <div class="campaign-page-contents__card-img">
                 <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
               </div>
-              <div class="campaign-page-campaign-card__body">
+              <div class="campaign-page-contents__card-body">
                 <div class="campaign-card-text">
                   <p class="campaign-card-text__title">ライセンス講習</p>
                   <p class="campaign-page-campaign-card-text__title-sub">ライセンス取得</p>
                 </div>
-                <p class="campaign-page-campaign-text-line"></p>
-                <div class="campaign-card-price">
+                <p class="campaign-page-contents__text-line"></p>
+                <div class="campaign-page-contents__card-price">
                   <p class="campaign-card-price__text">全部コミコミ(お一人様)</p>
                   <div class="campaign-card-price-box">
                     <p class="campaign-card-price__old-strike-through">¥56,000</p>
-                    <p class="campaign-card-price__new">¥46,000</p>
+                    <p class="campaign-page-contents__price-new">¥46,000</p>
                   </div>
                 </div>
-                <div class="campaign-pagecampaign-card-text__text-box md-none">
-                  <p class="campaign-pagecampaign-card-text__text">
+                <div class="campaign-page-contents__text-box md-none">
+                  <p class="campaign-page-contents__text">
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
                   </p>
                 </div>
                 <div class="campaign-page-campaign-card__date md-none">2023/6/1-9/30</div>
-                <div class="campaign-page-campaign-card__reserve md-none">ご予約・お問い合わせはコチラ</div>
+                <p class="campaign-page-campaign-card__reserve md-none">ご予約・お問い合わせはコチラ</p>
+                <div class="campaign-page-contents-layout">
+                  <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span>
+                  </a>
+                </div>
               </div>
             </a>
           </li>
           <li class="campaign-page-contents__item">
             <a href="#" class="campaign-card__item">
-              <div class="campaign-page-campaign-card__img">
+              <div class="campaign-page-contents__card-img">
                   <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子">
               </div>
-              <div class="campaign-page-campaign-card__body">
+              <div class="campaign-page-contents__card-body">
                 <div class="campaign-card-text">
                   <p class="campaign-card-text__title">体験ダイビング</p>
                   <p class="campaign-page-campaign-card-text__title-sub">貸切体験ダイビング</p>
                 </div>
-                <p class="campaign-page-campaign-text-line"></p>
-                <div class="campaign-card-price">
+                <p class="campaign-page-contents__text-line"></p>
+                <div class="campaign-page-contents__card-price">
                   <p class="campaign-card-price__text">全部コミコミ(お一人様)</p>
                   <div class="campaign-card-price-box">
                     <p class="campaign-card-price__old-strike-through">¥24,000</p>
-                    <p class="campaign-card-price__new">¥18,000</p>
+                    <p class="campaign-page-contents__price-new">¥18,000</p>
                   </div>
                 </div>
-                <div class="campaign-pagecampaign-card-text__text-box md-none">
-                  <p class="campaign-pagecampaign-card-text__text">
+                <div class="campaign-page-contents__text-box md-none">
+                  <p class="campaign-page-contents__text">
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
                   </p>
                 </div>
                 <div class="campaign-page-campaign-card__date md-none">2023/6/1-9/30</div>
-                <div class="campaign-page-campaign-card__reserve md-none">ご予約・お問い合わせはコチラ</div>
+                <p class="campaign-page-campaign-card__reserve md-none">ご予約・お問い合わせはコチラ</p>
               </div>
             </a>
           </li>
           <li class="campaign-page-contents__item">
             <a href="#" class="campaign-card__item">
-              <div class="campaign-page-campaign-card__img">
+              <div class="campaign-page-contents__card-img">
                 <img src="./assets/images/campaign-img3.jpg" alt="暗い海の中を泳いているクラゲが光に当てられている様子">
               </div>
-              <div class="campaign-page-campaign-card__body">
+              <div class="campaign-page-contents__card-body">
                 <div class="campaign-card-text">
                   <p class="campaign-card-text__title">体験ダイビング</p>
                   <p class="campaign-page-campaign-card-text__title-sub">ナイトダイビング</p>
                 </div>
-                <p class="campaign-page-campaign-text-line"></p>
-                <div class="campaign-card-price">
+                <p class="campaign-page-contents__text-line"></p>
+                <div class="campaign-page-contents__card-price">
                   <p class="campaign-card-price__text">全部コミコミ(お一人様)</p>
                   <div class="campaign-card-price-box">
                     <p class="campaign-card-price__old-strike-through">¥10,000</p>
-                    <p class="campaign-card-price__new">¥8,000</p>
+                    <p class="campaign-page-contents__price-new">¥8,000</p>
                   </div>
                 </div>
-                <div class="campaign-pagecampaign-card-text__text-box md-none">
-                  <p class="campaign-pagecampaign-card-text__text">
+                <div class="campaign-page-contents__text-box md-none">
+                  <p class="campaign-page-contents__text">
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
                   </p>
                 </div>
                 <div class="campaign-page-campaign-card__date md-none">2023/6/1-9/30</div>
-                <div class="campaign-page-campaign-card__reserve md-none">ご予約・お問い合わせはコチラ</div>
+                <p class="campaign-page-campaign-card__reserve md-none">ご予約・お問い合わせはコチラ</p>
               </div>
             </a>
           </li>
           <li class="campaign-page-contents__item">
             <a href="#" class="campaign-card__item">
-              <div class="campaign-page-campaign-card__img">
+              <div class="campaign-page-contents__card-img">
                 <img src="./assets/images/campaign-img4.jpg" alt="複数のダイバーたちが海の上で今にも潜ろうとしている様子">
               </div>
-              <div class="campaign-page-campaign-card__body">
+              <div class="campaign-page-contents__card-body">
                 <div class="campaign-card-text">
                   <p class="campaign-card-text__title">ファンダイビング</p>
                   <p class="campaign-page-campaign-card-text__title-sub">貸切ファンダイビング</p>
                 </div>
-                <p class="campaign-page-campaign-text-line"></p>
-                <div class="campaign-card-price">
+                <p class="campaign-page-contents__text-line"></p>
+                <div class="campaign-page-contents__card-price">
                   <p class="campaign-card-price__text">全部コミコミ(お一人様)</p>
                   <div class="campaign-card-price-box">
                     <div class="campaign-card-price-box">
                       <p class="campaign-card-price__old-strike-through">¥20,000</p>
-                      <p class="campaign-card-price__new">¥16,000</p>
+                      <p class="campaign-page-contents__price-new">¥16,000</p>
                     </div>
                   </div>
-                  <div class="campaign-page-campaign-card-text__text-box md-none">
-                    <p class="campaign-page-campaign-card-text__text">
+                  <div class="campaign-page-contents__text-box md-none">
+                    <p class="campaign-page-contents__text">
                       ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
                     </p>
                   </div>
                   <div class="campaign-page-campaign-card__date md-none">2023/6/1-9/30</div>
-                  <div class="campaign-page-campaign-card__reserve md-none">ご予約・お問い合わせはコチラ</div>
+                  <p class="campaign-page-campaign-card__reserve md-none">ご予約・お問い合わせはコチラ</p>
                 </div>
               </div>
             </a>
