リンク修正

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
         </a>
         <nav class="header__nav md-none">
           <ul class="header__items">
-              <li class="header__item"><a class="header__link" href="#"><span>Campaign</span>キャンペーン</a></li>
+              <li class="header__item"><a class="header__link" href="campaign-page.html"><span>Campaign</span>キャンペーン</a></li>
               <li class="header__item"><a class="header__link" href="#"><span>About us</span>私たちについて</a></li>
               <li class="header__item"><a class="header__link" href="#"><span>Information</span>ダイビング情報</a></li>
               <li class="header__item"><a class="header__link" href="#"><span>Blog</span>ブログ</a></li>
@@ -61,11 +61,6 @@
         </div>
         <div class="drawer-menu js-drawer">
             <div class="drawer-menu__inner">
-              <!-- <a href="index.html" class="drawer__name-layout">
-                <h2 class="drawer__name">
-                  <img class="drawer__name-logo" src="./assets/images/logo.svg" alt="CodeUps">
-                </h2>
-              </a> -->
               <div class="drawer-menu__container">
                 <div class="drawer-menu__container-left">
                   <ul class="drawer-menu__items-a">
@@ -287,7 +282,7 @@
           </div>
         </div>
         <div class="campaign-button-layout">
-          <a href="#" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span>
+          <a href="campaign-page.html" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span>
           </a>
         </div>
       </div>
