--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -179,7 +179,7 @@
       <div class="campaign-page-contents__inner inner">
         <ul class="campaign-page-contents__items">
           <li class="campaign-page-contents__item">
-            <a href="#" class="campaign-card__item">
+            <div href="#" class="campaign-card__item">
               <div class="campaign-page-contents__card-img">
                 <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
               </div>
@@ -208,10 +208,10 @@
                   </a>
                 </div>
               </div>
-            </a>
+            </div>
           </li>
           <li class="campaign-page-contents__item">
-            <a href="#" class="campaign-card__item">
+            <div href="#" class="campaign-card__item">
               <div class="campaign-page-contents__card-img">
                   <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子">
               </div>
@@ -235,11 +235,15 @@
                 </div>
                 <div class="campaign-page-campaign-card__date md-none">2023/6/1-9/30</div>
                 <p class="campaign-page-campaign-card__reserve md-none">ご予約・お問い合わせはコチラ</p>
+                <div class="campaign-page-contents-layout">
+                  <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span>
+                  </a>
+                </div>
               </div>
-            </a>
+            </div>
           </li>
           <li class="campaign-page-contents__item">
-            <a href="#" class="campaign-card__item">
+            <div href="#" class="campaign-card__item">
               <div class="campaign-page-contents__card-img">
                 <img src="./assets/images/campaign-img3.jpg" alt="暗い海の中を泳いているクラゲが光に当てられている様子">
               </div>
@@ -263,11 +267,15 @@
                 </div>
                 <div class="campaign-page-campaign-card__date md-none">2023/6/1-9/30</div>
                 <p class="campaign-page-campaign-card__reserve md-none">ご予約・お問い合わせはコチラ</p>
+                <div class="campaign-page-contents-layout">
+                  <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span>
+                  </a>
+                </div>
               </div>
-            </a>
+            </div>
           </li>
           <li class="campaign-page-contents__item">
-            <a href="#" class="campaign-card__item">
+            <div href="#" class="campaign-card__item">
               <div class="campaign-page-contents__card-img">
                 <img src="./assets/images/campaign-img4.jpg" alt="複数のダイバーたちが海の上で今にも潜ろうとしている様子">
               </div>
@@ -292,9 +300,13 @@
                   </div>
                   <div class="campaign-page-campaign-card__date md-none">2023/6/1-9/30</div>
                   <p class="campaign-page-campaign-card__reserve md-none">ご予約・お問い合わせはコチラ</p>
+                  <div class="campaign-page-contents-layout">
+                    <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span>
+                    </a>
+                  </div>
                 </div>
               </div>
-            </a>
+            </div>
           </li>
         </ul>
       </div>
