--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -179,7 +179,7 @@
       <div class="campaign-page-contents__inner inner">
         <ul class="campaign-page-contents__items">
           <li class="campaign-page-contents__item">
-            <div href="#" class="campaign-card__item">
+            <div class="campaign-card__item">
               <div class="campaign-page-contents__card-img">
                 <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
               </div>
@@ -200,10 +200,12 @@
                   <p class="campaign-page-contents__text">
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
                   </p>
+                  <div class="campaign-page-campaign-card__date">2023/6/1-9/30</div>
+                  <p class="campaign-page-campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
                 </div>
-                <div class="campaign-page-campaign-card__date md-none">2023/6/1-9/30</div>
-                <p class="campaign-page-campaign-card__reserve md-none">ご予約・お問い合わせはコチラ</p>
-                <div class="campaign-page-contents-layout">
+                <!-- <div class="campaign-page-campaign-card__date md-none">2023/6/1-9/30</div>
+                <p class="campaign-page-campaign-card__reserve md-none">ご予約・お問い合わせはコチラ</p> -->
+                <div class="campaign-page-contents-layout md-none">
                   <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span>
                   </a>
                 </div>
@@ -211,7 +213,7 @@
             </div>
           </li>
           <li class="campaign-page-contents__item">
-            <div href="#" class="campaign-card__item">
+            <div class="campaign-card__item">
               <div class="campaign-page-contents__card-img">
                   <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子">
               </div>
@@ -232,10 +234,10 @@
                   <p class="campaign-page-contents__text">
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
                   </p>
+                  <div class="campaign-page-campaign-card__date">2023/6/1-9/30</div>
+                  <p class="campaign-page-campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
                 </div>
-                <div class="campaign-page-campaign-card__date md-none">2023/6/1-9/30</div>
-                <p class="campaign-page-campaign-card__reserve md-none">ご予約・お問い合わせはコチラ</p>
-                <div class="campaign-page-contents-layout">
+                <div class="campaign-page-contents-layout md-none">
                   <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span>
                   </a>
                 </div>
@@ -243,7 +245,7 @@
             </div>
           </li>
           <li class="campaign-page-contents__item">
-            <div href="#" class="campaign-card__item">
+            <div class="campaign-card__item">
               <div class="campaign-page-contents__card-img">
                 <img src="./assets/images/campaign-img3.jpg" alt="暗い海の中を泳いているクラゲが光に当てられている様子">
               </div>
@@ -264,10 +266,10 @@
                   <p class="campaign-page-contents__text">
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
                   </p>
+                  <div class="campaign-page-campaign-card__date">2023/6/1-9/30</div>
+                  <p class="campaign-page-campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
                 </div>
-                <div class="campaign-page-campaign-card__date md-none">2023/6/1-9/30</div>
-                <p class="campaign-page-campaign-card__reserve md-none">ご予約・お問い合わせはコチラ</p>
-                <div class="campaign-page-contents-layout">
+                <div class="campaign-page-contents-layout md-none">
                   <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span>
                   </a>
                 </div>
@@ -275,7 +277,7 @@
             </div>
           </li>
           <li class="campaign-page-contents__item">
-            <div href="#" class="campaign-card__item">
+            <div class="campaign-card__item">
               <div class="campaign-page-contents__card-img">
                 <img src="./assets/images/campaign-img4.jpg" alt="複数のダイバーたちが海の上で今にも潜ろうとしている様子">
               </div>
@@ -297,10 +299,10 @@
                     <p class="campaign-page-contents__text">
                       ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
                     </p>
+                    <div class="campaign-page-campaign-card__date">2023/6/1-9/30</div>
+                    <p class="campaign-page-campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
                   </div>
-                  <div class="campaign-page-campaign-card__date md-none">2023/6/1-9/30</div>
-                  <p class="campaign-page-campaign-card__reserve md-none">ご予約・お問い合わせはコチラ</p>
-                  <div class="campaign-page-contents-layout">
+                  <div class="campaign-page-contents-layout md-none">
                     <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span>
                     </a>
                   </div>
