--- a/src/index.html
+++ b/src/index.html
@@ -186,10 +186,10 @@
         </div>
         <div class="campaign__container">
           <div class="campaign__container-slider swiper">
-            <div class="campaign-slider-wrapper swiper-wrapper">
-              <div class="campaign-slider-slide swiper-slide">
-              <a href="#" class="campaign-card__item">
-                <div class="campaign-card__img">
+            <div class="campaign__container-slider-wrapper swiper-wrapper">
+              <div class="campaign__container-slider-slide swiper-slide">
+              <a href="#" class="campaign__container-card">
+                <div class="campaign__container-card-img">
                   <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
                 </div>
                 <div class="campaign-card__body">
@@ -208,9 +208,9 @@
                 </div>
               </a>
               </div>
-              <div class="campaign-slider-slide swiper-slide">
-                <a href="#" class="campaign-card__item">
-                  <div class="campaign-card__img">
+              <div class="campaign__container-slider-slide swiper-slide">
+                <a href="#" class="campaign__container-card">
+                  <div class="campaign__container-card-img">
                       <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子">
                   </div>
                   <div class="campaign-card__body">
@@ -229,9 +229,9 @@
                   </div>
                 </a>
               </div>
-              <div class="campaign-slider-slide swiper-slide">
-                <a href="#" class="campaign-card__item">
-                  <div class="campaign-card__img">
+              <div class="campaign__container-slider-slide swiper-slide">
+                <a href="#" class="campaign__container-card">
+                  <div class="campaign__container-card-img">
                     <img src="./assets/images/campaign-img3.jpg" alt="暗い海の中を泳いているクラゲが光に当てられている様子">
                   </div>
                   <div class="campaign-card__body">
@@ -250,9 +250,9 @@
                   </div>
                 </a>
               </div>
-              <div class="campaign-slider-slide swiper-slide">
-                <a href="#" class="campaign-card__item">
-                  <div class="campaign-card__img">
+              <div class="campaign__container-slider-slide swiper-slide">
+                <a href="#" class="campaign__container-card">
+                  <div class="campaign__container-card-img">
                     <img src="./assets/images/campaign-img4.jpg" alt="複数のダイバーたちが海の上で今にも潜ろうとしている様子">
                   </div>
                   <div class="campaign-card__body">
